			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02i: *********************************

BUG: (03/04/05, DN) Library write crashes (Bug #216)
FIX: In "output.ELIB" "output.JELIB" "output.ReadableDump" write name
of external library in case it has not file name yet.

BUG: (03/04/05, DN) Network tool didn't renumber after change of name in global primitive.
FIX: In "NetworkTool.newVariable" "NetworkTool.killVariable" put "setNetworksDirty".


IMP/MAN: 
IMP/MAN: (03/02/05, GVG) Adding observable-observer pattern to notify changes in light color and direction

BUG: (03/02/05, SMR) Transparent color changes are not restored from saved preferences (Bug #213)
FIX: In "Prefs.java", must recache technology colors after importing.

IMP/MAN: (03/02/05, GVG) Colors used for cells and highlighted nodes in 3D view are available as special colors in ColorsTab
Transparency is available in highlighted nodes (0.5f is the factor).

BUG: (03/01/05, GVG) Arcs in TechPalette got zero area bounding box after tail/head changes (Bug 211)
FIX: In ArcInst.makeDummyInstance, calculate bounding box with angle=0

IMP: (02/24/05, GVG) New 3D Menu in menubar if 3D plugin is found. It will contain list
of 3D demos.

BUG: (02/23/05, SMR) GDS output does not handle polygons with duplicate points.
FIX: In GDS.outputBoundary(), remove duplicate points before writing.

BUG (02/21/05, GVG) ArrayStoreException in NodeInst.replace due to wrong allocation of
array memory (Bug #206)

IMP/MAN (02/21/05, GVG) New version of 3D tab in preferences. It would be a 3D view where transparency
and colors can be seen if 3D plugin is available. Access to 3D transparency factors in preference now.

IMP/MAN (02/17/05, GVG) First version of 3D Demo Tool. Few extra classes in j3d plugin.
Features: setup of original view angle, two spline interpolators, dialog box to control motion,
using node variables to control camera viewpoint.
