@@ -4,6 +4,7 @@ import com.sun.j3d.utils.behaviors.mouse.MouseZoom;
 
 import javax.vecmath.Matrix4d;
 import java.awt.*;
+import java.io.Serializable;
 
 /**
  * Extending original zoom class to allow zoom not from original behavior
