@@ -54,7 +54,8 @@ public class FileType {
 	/** Describes IRSIM decks. */			public static final FileType IRSIM        = new FileType("IRSIM", new String[] {"sim"}, "IRSIM Deck (sim)");
 	/** Describes Java source. */			public static final FileType JAVA         = new FileType("Java", new String[] {"java", "bsh"}, "Java Script File (java, bsh)");
 	/** Describes JELIB files.*/			public static final FileType JELIB        = new FileType("JELIB", new String[] {"jelib"}, "Library File (jelib)");
-	/** Describes L files.*/				public static final FileType L            = new FileType("L", new String[] {"L"}, "L File (L)");
+    /** Describes JELIB files.*/			public static final FileType J3D          = new FileType("J3D", new String[] {"j3d"}, "Java3D Demo File");	
+    /** Describes L files.*/				public static final FileType L            = new FileType("L", new String[] {"L"}, "L File (L)");
 	/** Describes LEF files.*/				public static final FileType LEF          = new FileType("LEF", new String[] {"lef"}, "LEF File (lef)");
 	/** Describes Maxwell decks. */			public static final FileType MAXWELL      = new FileType("Maxwell", new String[] {"mac"}, "Maxwell Deck (mac)");
 	/** Describes MOSSIM decks. */			public static final FileType MOSSIM       = new FileType("MOSSIM", new String[] {"ntk"}, "MOSSIM Deck (ntk)");
